// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Average duration by browser when data is loaded returns the average duration by browser 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "x": 1600159980000,
        "y": 1131000,
      },
      Object {
        "x": 1600160010000,
        "y": 617000,
      },
      Object {
        "x": 1600160040000,
      },
      Object {
        "x": 1600160070000,
        "y": 1963000,
      },
      Object {
        "x": 1600160100000,
        "y": 1190000,
      },
      Object {
        "x": 1600160130000,
        "y": 1697000,
      },
      Object {
        "x": 1600160160000,
      },
      Object {
        "x": 1600160190000,
        "y": 710000,
      },
      Object {
        "x": 1600160220000,
        "y": 675250,
      },
      Object {
        "x": 1600160250000,
      },
      Object {
        "x": 1600160280000,
      },
      Object {
        "x": 1600160310000,
        "y": 1763500,
      },
      Object {
        "x": 1600160340000,
        "y": 539333.333333333,
      },
      Object {
        "x": 1600160370000,
      },
      Object {
        "x": 1600160400000,
      },
      Object {
        "x": 1600160430000,
        "y": 1650000,
      },
      Object {
        "x": 1600160460000,
        "y": 781000,
      },
      Object {
        "x": 1600160490000,
      },
      Object {
        "x": 1600160520000,
      },
      Object {
        "x": 1600160550000,
        "y": 1710000,
      },
      Object {
        "x": 1600160580000,
        "y": 718000,
      },
      Object {
        "x": 1600160610000,
        "y": 11912000,
      },
      Object {
        "x": 1600160640000,
      },
      Object {
        "x": 1600160670000,
        "y": 885000,
      },
      Object {
        "x": 1600160700000,
        "y": 1043000,
      },
      Object {
        "x": 1600160730000,
        "y": 406000,
      },
      Object {
        "x": 1600160760000,
      },
      Object {
        "x": 1600160790000,
        "y": 1296000,
      },
      Object {
        "x": 1600160820000,
        "y": 570500,
      },
      Object {
        "x": 1600160850000,
      },
      Object {
        "x": 1600160880000,
      },
      Object {
        "x": 1600160910000,
        "y": 1110000,
      },
      Object {
        "x": 1600160940000,
        "y": 533500,
      },
      Object {
        "x": 1600160970000,
        "y": 782500,
      },
      Object {
        "x": 1600161000000,
      },
      Object {
        "x": 1600161030000,
        "y": 1200000,
      },
      Object {
        "x": 1600161060000,
        "y": 522000,
      },
      Object {
        "x": 1600161090000,
      },
      Object {
        "x": 1600161120000,
      },
      Object {
        "x": 1600161150000,
        "y": 1006000,
      },
      Object {
        "x": 1600161180000,
        "y": 1203000,
      },
      Object {
        "x": 1600161210000,
      },
      Object {
        "x": 1600161240000,
      },
      Object {
        "x": 1600161270000,
        "y": 1908000,
      },
      Object {
        "x": 1600161300000,
        "y": 549000,
      },
      Object {
        "x": 1600161330000,
        "y": 685000,
      },
      Object {
        "x": 1600161360000,
      },
      Object {
        "x": 1600161390000,
        "y": 2055000,
      },
      Object {
        "x": 1600161420000,
        "y": 699750,
      },
      Object {
        "x": 1600161450000,
      },
      Object {
        "x": 1600161480000,
      },
      Object {
        "x": 1600161510000,
        "y": 1557000,
      },
      Object {
        "x": 1600161540000,
        "y": 4993000,
      },
      Object {
        "x": 1600161570000,
      },
      Object {
        "x": 1600161600000,
      },
      Object {
        "x": 1600161630000,
        "y": 898000,
      },
      Object {
        "x": 1600161660000,
        "y": 4100500,
      },
      Object {
        "x": 1600161690000,
      },
      Object {
        "x": 1600161720000,
      },
      Object {
        "x": 1600161750000,
        "y": 1305000,
      },
      Object {
        "x": 1600161780000,
      },
    ],
    "title": "Electron",
  },
]
`;

exports[`Average duration by browser when data is loaded returns the average duration by browser filtering by transaction name 2`] = `
Array [
  Object {
    "data": Array [
      Object {
        "x": 1600159980000,
      },
      Object {
        "x": 1600160010000,
      },
      Object {
        "x": 1600160040000,
      },
      Object {
        "x": 1600160070000,
        "y": 1096000,
      },
      Object {
        "x": 1600160100000,
      },
      Object {
        "x": 1600160130000,
      },
      Object {
        "x": 1600160160000,
      },
      Object {
        "x": 1600160190000,
        "y": 710000,
      },
      Object {
        "x": 1600160220000,
      },
      Object {
        "x": 1600160250000,
      },
      Object {
        "x": 1600160280000,
      },
      Object {
        "x": 1600160310000,
        "y": 1108000,
      },
      Object {
        "x": 1600160340000,
      },
      Object {
        "x": 1600160370000,
      },
      Object {
        "x": 1600160400000,
      },
      Object {
        "x": 1600160430000,
        "y": 1221000,
      },
      Object {
        "x": 1600160460000,
      },
      Object {
        "x": 1600160490000,
      },
      Object {
        "x": 1600160520000,
      },
      Object {
        "x": 1600160550000,
        "y": 1325000,
      },
      Object {
        "x": 1600160580000,
      },
      Object {
        "x": 1600160610000,
      },
      Object {
        "x": 1600160640000,
      },
      Object {
        "x": 1600160670000,
        "y": 885000,
      },
      Object {
        "x": 1600160700000,
      },
      Object {
        "x": 1600160730000,
      },
      Object {
        "x": 1600160760000,
      },
      Object {
        "x": 1600160790000,
        "y": 1296000,
      },
      Object {
        "x": 1600160820000,
      },
      Object {
        "x": 1600160850000,
      },
      Object {
        "x": 1600160880000,
      },
      Object {
        "x": 1600160910000,
        "y": 1110000,
      },
      Object {
        "x": 1600160940000,
      },
      Object {
        "x": 1600160970000,
      },
      Object {
        "x": 1600161000000,
      },
      Object {
        "x": 1600161030000,
        "y": 1200000,
      },
      Object {
        "x": 1600161060000,
      },
      Object {
        "x": 1600161090000,
      },
      Object {
        "x": 1600161120000,
      },
      Object {
        "x": 1600161150000,
        "y": 1006000,
      },
      Object {
        "x": 1600161180000,
      },
      Object {
        "x": 1600161210000,
      },
      Object {
        "x": 1600161240000,
      },
      Object {
        "x": 1600161270000,
        "y": 1908000,
      },
      Object {
        "x": 1600161300000,
      },
      Object {
        "x": 1600161330000,
      },
      Object {
        "x": 1600161360000,
      },
      Object {
        "x": 1600161390000,
        "y": 1420000,
      },
      Object {
        "x": 1600161420000,
      },
      Object {
        "x": 1600161450000,
      },
      Object {
        "x": 1600161480000,
      },
      Object {
        "x": 1600161510000,
        "y": 1215000,
      },
      Object {
        "x": 1600161540000,
      },
      Object {
        "x": 1600161570000,
      },
      Object {
        "x": 1600161600000,
      },
      Object {
        "x": 1600161630000,
        "y": 898000,
      },
      Object {
        "x": 1600161660000,
      },
      Object {
        "x": 1600161690000,
      },
      Object {
        "x": 1600161720000,
      },
      Object {
        "x": 1600161750000,
        "y": 1305000,
      },
      Object {
        "x": 1600161780000,
      },
    ],
    "title": "Electron",
  },
]
`;
